[gd_scene load_steps=39 format=3 uid="uid://fo1x20ewfiw8"]

[ext_resource type="FontFile" uid="uid://bl0f2csh2wd2l" path="res://assets/fonts/DungeonFont.ttf" id="1_2ey2a"]
[ext_resource type="Script" uid="uid://fedb1gyb71ci" path="res://scripts/battle.gd" id="1_ogh5i"]
[ext_resource type="Script" uid="uid://cwt6hg1yue00j" path="res://scripts/battle_ui.gd" id="2_06lu2"]
[ext_resource type="FontFile" uid="uid://dalt11g8b1g2k" path="res://assets/fonts/Kitchen Sink.ttf" id="4_ply01"]
[ext_resource type="Texture2D" uid="uid://cep5ej2435hik" path="res://assets/minota.png" id="5_mm37a"]
[ext_resource type="Shader" uid="uid://mlpdpefcr0h3" path="res://scripts/shaders/melt.gdshader" id="5_wwnh4"]
[ext_resource type="Texture2D" uid="uid://bnxw0e4ir0pg" path="res://assets/sprites/slime.png" id="6_v2rec"]
[ext_resource type="PackedScene" uid="uid://dxiu4knib3rxv" path="res://scenes/consumable.tscn" id="7_3wf0j"]
[ext_resource type="Script" uid="uid://d0miqlbu48hrp" path="res://scripts/camera.gd" id="7_lmkk5"]
[ext_resource type="Texture2D" uid="uid://8r6702a8yda4" path="res://assets/sprites/back.png" id="8_v7i3o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a11u7"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c73m3"]
shader = ExtResource("5_wwnh4")
shader_parameter/progress = 0.0
shader_parameter/meltiness = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71kic"]
bg_color = Color(0.0562916, 0.0562916, 0.0562916, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aaem2"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yahae"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.163861, 0.163861, 0.163861, 0.854902)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_qd3wb"]
font = ExtResource("1_2ey2a")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_1hw73"]
line_spacing = 12.0
font = ExtResource("4_ply01")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_l03xe"]
font = ExtResource("1_2ey2a")
font_size = 51

[sub_resource type="LabelSettings" id="LabelSettings_rg4p4"]
font = ExtResource("4_ply01")
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nbsp3"]
bg_color = Color(0.388235, 0.866667, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_melst"]
font = ExtResource("4_ply01")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_i545t"]
font = ExtResource("4_ply01")
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tr28y"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.737193, 0.737193, 0.737193, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pecp7"]
line_spacing = 12.0
font = ExtResource("4_ply01")
font_size = 56

[sub_resource type="LabelSettings" id="LabelSettings_b64xe"]
line_spacing = 24.0
font = ExtResource("4_ply01")
font_size = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dnbbd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3s4r"]
bg_color = Color(0.294028, 0.294028, 0.294028, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2mrg2"]
bg_color = Color(0.589096, 0.589096, 0.589095, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6j5be"]
bg_color = Color(0.261113, 0.261113, 0.261113, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v56pd"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4ubn6"]
line_spacing = 12.0
font = ExtResource("4_ply01")
font_size = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_66ngm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vceff"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.294028, 0.294028, 0.294028, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekamt"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.589096, 0.589096, 0.589095, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_djc8l"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.261113, 0.261113, 0.261113, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4dll"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v7ekf"]
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 1.07288e-05
direction = Vector3(0, 1, 0)
spread = 20.0
initial_velocity_max = 35.0
gravity = Vector3(0, 98, 0)
scale_min = 5.0
scale_max = 8.0

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_wto6v"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_ogh5i")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Main" type="Control" parent="UI"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_06lu2")

[node name="Panel" type="Panel" parent="UI/Main"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.337
anchor_right = 0.5
anchor_bottom = 0.337
offset_left = -320.0
offset_top = -311.36
offset_right = 320.0
offset_bottom = 312.64
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a11u7")

[node name="EnemyTexture" type="TextureRect" parent="UI/Main/Panel"]
texture_filter = 1
material = SubResource("ShaderMaterial_c73m3")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.513
anchor_right = 0.5
anchor_bottom = 0.513
offset_left = -248.0
offset_top = -264.112
offset_right = 256.0
offset_bottom = 199.888
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("6_v2rec")

[node name="EnemyHealthProgressBar" type="ProgressBar" parent="UI/Main/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = 246.0
offset_right = 240.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_71kic")
theme_override_styles/fill = SubResource("StyleBoxFlat_aaem2")
value = 100.0
show_percentage = false

[node name="EnemyEffects" type="Control" parent="UI/Main/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -296.0
offset_right = 296.0
offset_bottom = -232.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="UI/Main/Panel/EnemyEffects"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -26.0
offset_bottom = 26.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yahae")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Main/Panel/EnemyEffects/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 3
alignment = 2

[node name="GameOver" type="Label" parent="UI/Main"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -7.5
offset_right = 288.0
offset_bottom = 93.5
grow_horizontal = 2
grow_vertical = 2
text = "You died in the forest, your adventure is done."
label_settings = SubResource("LabelSettings_qd3wb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ArcadeFinalScore" type="Label" parent="UI/Main"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = 112.0
offset_right = 320.0
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
text = "Your final score is:
300"
label_settings = SubResource("LabelSettings_1hw73")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level" type="Label" parent="UI/Main"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.344
anchor_right = 0.5
anchor_bottom = 0.344
offset_left = -320.0
offset_top = -394.32
offset_right = 320.0
offset_bottom = -342.32
grow_horizontal = 2
grow_vertical = 2
text = "Level 0"
label_settings = SubResource("LabelSettings_l03xe")
horizontal_alignment = 1

[node name="LevelText" type="Label" parent="UI/Main"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.344
anchor_right = 0.5
anchor_bottom = 0.344
offset_left = 120.0
offset_top = -388.32
offset_right = 320.0
offset_bottom = -348.32
grow_horizontal = 2
grow_vertical = 2
text = "0/10"
label_settings = SubResource("LabelSettings_rg4p4")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HealthProgressBar" type="ProgressBar" parent="UI/Main"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 120.0
offset_right = 320.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_71kic")
theme_override_styles/fill = SubResource("StyleBoxFlat_aaem2")
value = 100.0
show_percentage = false

[node name="MagicProgressBar" type="ProgressBar" parent="UI/Main"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 168.0
offset_right = 320.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_71kic")
theme_override_styles/fill = SubResource("StyleBoxFlat_nbsp3")
value = 100.0
show_percentage = false

[node name="HP" type="Label" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = 112.0
offset_right = -176.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
text = "0/100"
label_settings = SubResource("LabelSettings_melst")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HP2" type="Label" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = 112.0
offset_right = 160.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
text = "HP"
label_settings = SubResource("LabelSettings_i545t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MP" type="Label" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = 158.0
offset_right = -176.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
text = "100/100"
label_settings = SubResource("LabelSettings_melst")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MP2" type="Label" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = 160.0
offset_right = 160.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
text = "MP"
label_settings = SubResource("LabelSettings_i545t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyOutline" type="Panel" parent="UI/Main"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -464.0
offset_right = 248.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tr28y")

[node name="YouWin" type="Label" parent="UI/Main"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.337
anchor_right = 0.5
anchor_bottom = 0.337
offset_left = -284.04
offset_top = -255.36
offset_right = 284.04
offset_bottom = -191.36
grow_horizontal = 2
grow_vertical = 2
text = "YOU WIN!"
label_settings = SubResource("LabelSettings_pecp7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Effects" type="Control" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = 437.0
offset_right = 280.0
offset_bottom = 493.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="UI/Main/Effects"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -28.0
offset_right = 8.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yahae")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Main/Effects/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 3
alignment = 1

[node name="YouGot" type="ScrollContainer" parent="UI/Main"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.337
anchor_right = 0.5
anchor_bottom = 0.337
offset_left = -296.0
offset_top = -183.36
offset_right = 280.0
offset_bottom = 264.64
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Main/YouGot"]
custom_minimum_size = Vector2(576, 448)
layout_mode = 2
text = "
"
label_settings = SubResource("LabelSettings_b64xe")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DoubleRewards" type="Button" parent="UI/Main"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.337
anchor_right = 0.5
anchor_bottom = 0.337
offset_left = -296.0
offset_top = 352.64
offset_right = 296.0
offset_bottom = 424.64
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ply01")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_dnbbd")
theme_override_styles/disabled = SubResource("StyleBoxFlat_q3s4r")
theme_override_styles/hover = SubResource("StyleBoxFlat_2mrg2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6j5be")
theme_override_styles/normal = SubResource("StyleBoxFlat_v56pd")
text = "Watch an ad to double rewards!"

[node name="Revive" type="Button" parent="UI/Main"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = 228.0
offset_right = 320.0
offset_bottom = 344.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ply01")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_dnbbd")
theme_override_styles/disabled = SubResource("StyleBoxFlat_q3s4r")
theme_override_styles/hover = SubResource("StyleBoxFlat_2mrg2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6j5be")
theme_override_styles/normal = SubResource("StyleBoxFlat_v56pd")
text = "Watch an ad for a second chance?"
autowrap_mode = 2

[node name="RegularRewards" type="Button" parent="UI/Main"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.337
anchor_right = 0.5
anchor_bottom = 0.337
offset_left = -296.0
offset_top = 504.64
offset_right = 296.0
offset_bottom = 576.64
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ply01")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_dnbbd")
theme_override_styles/disabled = SubResource("StyleBoxFlat_q3s4r")
theme_override_styles/hover = SubResource("StyleBoxFlat_2mrg2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6j5be")
theme_override_styles/normal = SubResource("StyleBoxFlat_v56pd")
text = "Regular rewards"

[node name="Or" type="Label" parent="UI/Main"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.337
anchor_right = 0.5
anchor_bottom = 0.337
offset_left = -284.04
offset_top = 432.64
offset_right = 284.04
offset_bottom = 496.64
grow_horizontal = 2
grow_vertical = 2
text = "or..."
label_settings = SubResource("LabelSettings_4ubn6")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Main"]
custom_minimum_size = Vector2(640, 192)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = 224.0
offset_right = 320.0
offset_bottom = 416.0
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Main/ScrollContainer"]
custom_minimum_size = Vector2(192, 192)
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 24
alignment = 1

[node name="Consumable" parent="UI/Main/ScrollContainer/HBoxContainer" instance=ExtResource("7_3wf0j")]
layout_mode = 2

[node name="Back" type="Button" parent="UI/Main"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.344
anchor_right = 0.5
anchor_bottom = 0.344
offset_left = -320.0
offset_top = -400.32
offset_right = -248.0
offset_bottom = -340.32
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ply01")
theme_override_styles/focus = SubResource("StyleBoxEmpty_66ngm")
theme_override_styles/disabled = SubResource("StyleBoxFlat_vceff")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekamt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_djc8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_h4dll")
icon = ExtResource("8_v7i3o")
icon_alignment = 1
expand_icon = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(360, 384)
scale = Vector2(10, 10)
texture = ExtResource("5_mm37a")
process_material = SubResource("ParticleProcessMaterial_v7ekf")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("7_lmkk5")

[node name="PlayerTimer" type="Timer" parent="."]
process_callback = 0
autostart = true

[node name="EnemyTimer" type="Timer" parent="."]
process_priority = 1
process_callback = 0
autostart = true

[node name="MagicTimer" type="Timer" parent="."]
autostart = true

[node name="ConsumableTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPolyphonic_wto6v")

[node name="EffectTimer" type="Timer" parent="."]
autostart = true

[connection signal="mouse_entered" from="UI/Main/Panel/EnemyTexture" to="." method="_on_enemy_texture_mouse_entered"]
[connection signal="mouse_exited" from="UI/Main/Panel/EnemyTexture" to="." method="_on_enemy_texture_mouse_exited"]
[connection signal="pressed" from="UI/Main/DoubleRewards" to="." method="_on_double_rewards_pressed"]
[connection signal="pressed" from="UI/Main/Revive" to="." method="_on_revive_pressed"]
[connection signal="pressed" from="UI/Main/RegularRewards" to="." method="_on_regular_rewards_pressed"]
[connection signal="pressed" from="UI/Main/Back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="PlayerTimer" to="." method="_on_player_timer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="MagicTimer" to="." method="_on_misc_timer_timeout"]
[connection signal="timeout" from="ConsumableTimer" to="." method="_on_consumable_timer_timeout"]
[connection signal="timeout" from="EffectTimer" to="." method="_on_effect_timer_timeout"]
